hphp/test/zend/good/Zend/tests/generators/yield_from_greedy_parse.php.expectf
int(42)

Fatal error: Call to undefined function from() in %s/yield_from_greedy_parse.php on line 10
